Generating task resource

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="js/main.js"></script>
 	</head>
 	<body ng-app="helloWorld">
+		<h1>Funcionou! Brigado LAN! <3 <3> <3>></h1>
 		<div ng-include="'sample.html'"></div>
 		<div ng-controller="helloWorldCtrl">
 			<ul>
