--- a/board.html
+++ b/board.html
@@ -4,6 +4,7 @@
 		<title>Hello Angular</title>
 		<script type="text/javascript" src="js/angular.min.js"></script>
 		<script type="text/javascript" src="js/angular-drag-and-drop-lists.min.js"></script>
+		<script type="text/javascript" src="js/angular-resource.min.js"></script>
 		<script type="text/javascript" src="js/board.js"></script>
 
 		<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -12,13 +13,14 @@
 	</head>
 	<body ng-app="board">
 		<div class="container" ng-controller="boardController" style="margin-top: 20px">
+			{{tasks}}
 			<div ng-view class="simpleDemo">
 				<div ng-repeat="(listName, list) in models.lists" class="col-md-4">
 					<div class="panel panel-info">
 						<div class="panel-heading">
 							<h3 class="panel-title">{{listName}}</h3>	
 						</div>
-						<div class="panel-body" ng-include="'simple.html'"></div>
+						<div class="panel-body" ng-include="'card.html'"></div>
 					</div>
 				</div>
 			</div>
